RT1064/Project/MDK/.vscode/uv4.log
*** Using Compiler 'V6.15', folder: 'D:\keil_5.33\ARM\ARMCLANG\Bin'
Build target 'nor_sdram_zf_dtcm_v6'
Note: source file '..\CODE\common.c' - object file renamed from '.\Objects\common.o' to '.\Objects\common_1.o'.../CODE/encoder.c(25): error: use of undeclared identifier 'icarStr'
  icarStr.SpeedFeedback = (float)(motorStr.EncoderValue * PI * motorStr.DiameterWheel)/ MOTOR_CONTROL_CYCLE / motorStr.EncoderLine / 4.0f / motorStr.ReductionRatio; //  m/s
  ^
1 error generated.
compiling encoder.c...
../CODE/timer_pit.c(11): error: use of undeclared identifier 'icarStr'
                        rt_kprintf("encoder:%d\r,speed:%d\r\n", (int)motorStr.EncoderValue, (int)icarStr.SpeedFeedback*1000);
                                                                                                 ^
1 error generated.
compiling timer_pit.c...
".\Objects\RT106X.axf" - 2 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:03
